Only defer initial refresh when actually instanciated from QML.

Fixes initial refresh in Kicker, where the RUM is instanciated
internally by RootModel.

Fixes regression from 5ad6e274b7790.

BUG:379783